# jamf-mcp-hub

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  remediate.py  requirements.txt  run_tests.sh  setup.sh  test_agent.py  verify_test_coverage.py
.claude/agents/: code-standards-reviewer.md  jamf-api-lookup.md  mcp-server-builder.md  test-and-lint-validator.md
.github/workflows/: docker-publish.yml  secret-scan.yml
docs/: INSTALLATION.md  TOOLS.md
jamf_docs_mcp/: README.md  pyproject.toml  requirements.txt  test_server.py
jamf_docs_mcp/src/jamf_docs_mcp/: __init__.py  server.py
src/jamf_mcp/: __init__.py  auth.py  client.py  models.py  prompts.py  protect_auth.py  protect_client.py  security_auth.py  security_client.py  server.py  test_runner.py
src/jamf_mcp/tools/: __init__.py  _common.py  _registry.py  api_roles.py  app_installers.py  apps.py  categories.py  computers.py  extension_attributes.py  groups.py  locations.py  mobile_devices.py  policies.py  prestages.py  printers.py  profiles.py  protect_alerts.py  protect_analytics.py  protect_computers.py  risk.py  scripts.py  setup.py  users.py
