[project]
name = "jamf-docs-mcp"
version = "0.1.0"
description = "MCP server that proxies the Jamf Developer Documentation MCP server for API endpoint lookup"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
jamf-docs-mcp = "jamf_docs_mcp.server:main"
